--- a/ThermoFluids/templates/ThermoFluids/TestView.html
+++ b/ThermoFluids/templates/ThermoFluids/TestView.html
@@ -5,101 +5,176 @@
 {% block scripts_and_styles %}
 <script src="{% static 'SmoUtil.js' %}"></script>
 <link rel="stylesheet" type="text/css" href="{% static 'css/SmoInputOutputView.css' %}">
+
+<script type="text/javascript" src="http://dygraphs.com/dygraph-dev.js"></script>
+<script type="text/javascript" src="http://cavorite.com/labs/js/dygraphs-export/dygraph-extra.js"></script>
+<script type="text/javascript" src="https://www.google.com/jsapi"></script>
+
 <script>
-angular.module('SmoConvert', ['ui.bootstrap', 'smo'])
+google.load('visualization', '1.0', {'packages':["corechart", "table", "controls"]});
+angular.module('FluidPropsCalculator', ['ui.bootstrap', 'smo'])
 	.config(['$httpProvider', function($httpProvider) {
 	    $httpProvider.defaults.xsrfCookieName = 'csrftoken';
 	    $httpProvider.defaults.xsrfHeaderName = 'X-CSRFToken';
 	}])
-	.controller('SmoConvertController', 'ModelCommunicator', [ '$scope', function($scope, ModelCommunicator) {
-
-	$scope.input = {autoFetch: true, dataUrl: '/ThermoFluids/TestView/', action: 'getInputs'};
-// 	$scope.outputs = [{ dataUrl: '/ThermoFluids/TestView/', action: 'compute'}];
-	
-// 	$scope.compute = function(index) {
-// 		$scope.outputs[index].fetchData($scope.inputs[index].data.values);
-// 	}
-	
-	$scope.convert = function() {
-		$scope.input.autoFetch = false;
-	}
+	.controller('FluidPropsController', [ '$scope', '$http', 'ModelCommunicator', function($scope, $http, ModelCommunicator) {
+		$scope.activeTabId = "";
+		$('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
+			  $scope.activeTabId = e.target.id; // activated tab
+// 			  e.relatedTarget // previous tab
+			});
+		
+		$scope.plotObject = {
+			inputCommunicator: new ModelCommunicator(),
+			resultsCommunicator: new ModelCommunicator()
+		};
+		
+		$scope.plotObject.inputCommunicator.fetchData(
+			'getPlotData', {});
+		
+		console.log($scope.plotObject.inputCommunicator);
+		
+// 		$scope.compute = function(index) {
+// 			$scope.fluidProps.results[index].resultsCommunicator.fetchData(
+// 				'compute', $scope.fluidProps.inputs[index].inputCommunicator.data.values);
+// 		}
+		
+// 		// Fluids info		
+// 		$scope.fluidInfo = {
+// 			inputCommunicator: new ModelCommunicator()
+// 		};
+		
+// 		$scope.fluidInfo.inputCommunicator.fetchData(
+// 			'getFluidInfo', {}, function(comm){
+// 				$scope.fluidInfo.selectedFluid = comm.data[0];
+// 			});
+		
+// 		// Saturation properties		
+// 		$scope.saturation = {
+// 			inputCommunicator: new ModelCommunicator(),
+// 			resultsCommunicator: new ModelCommunicator()
+// 		};
+		
+// 		$scope.saturation.inputCommunicator.fetchData(
+// 			'getFluidList', {}, function(comm){
+// 				$scope.saturation.selectedFluid = comm.data[0][0];
+// 			});
+		
+// 		$scope.plotData = function() {
+// 			$scope.xAxis = 0;
+// 			$scope.chart = new Dygraph(document.getElementById('plot_div'), $scope.saturation.resultsCommunicator.data.array,
+// 					{
+// 						labels: $scope.saturation.resultsCommunicator.data.labels,
+// 						labelsDiv: 'dylegend',
+// 						labelsDivWidth: 150,
+// 						labelsSeparateLines: true,
+// 						width: 700,
+// 						height: 400,
+// 						xlabel: $scope.saturation.resultsCommunicator.data.labels[0],
+// 						ylabel: $scope.saturation.resultsCommunicator.data.labels[1],
+// 						axes : { x : {  logscale : true }}
+// 			        });	
+// 		}
+		
+		
+		
+		$scope.fetchSaturationData = function (){
+			$scope.saturation.resultsCommunicator.fetchData(
+					'getSaturationData', {fluidName : $scope.saturation.selectedFluid}, function(comm){
+// 						$scope.plotData();
+						$scope.plotObject = {name: 'saturationPlot', 
+								title: $scope.saturation.selectedFluid,
+								data: $scope.saturation.resultsCommunicator.data.array, 
+								labels: $scope.saturation.resultsCommunicator.data.labels,
+								formats: $scope.saturation.resultsCommunicator.data.formats,
+								xlabel: $scope.saturation.resultsCommunicator.data.labels[0],
+								ylabel: $scope.saturation.resultsCommunicator.data.labels[1],
+								xlogscale: true,
+								ylogscale: false};
+					});			
+		}
 }])
 </script>
-<style>
-
-.converter {
-	margin-top: 40px;
-	text-align: center;
-}
-
-.converter > .super-group {
-	border-style: solid; 
-	border-top: none; 
-	border-color: #DDD; 
-	border-width: 1px; 
-	background-color: #E6E6FA;
-	padding-right: 20px;
-	display: inline-block;
-	overflow: auto;
-}
-
-.converter .choice-group {
-	display: inline-block; 
-	margin-left: 20px; 
-	vertical-align:top;
-	margin-top: 20px;
-	margin-bottom: 20px;
-}
-
-.converter .results-group {
-	display: inline-block; 
-	margin-left: 60px;  
-	vertical-align:top;
-	margin-top: 20px;
-	margin-bottom: 20px;
-	float: right;
-}
-
-.converter .select-text {
-	text-align: left; 
-	font-size: medium;  
-	margin-bottom: 5px;
-	color: #0875CA;
-}
-
-.converter .field-label {
-	display: inline-block;
-	white-space: nowrap;
-	text-align: left;
-	width: 50px;
-	height: 30px;
-	color: #0875CA;
-}
-
-.converter .field-input {
-	display: inline-block; 
-	white-space: nowrap;
-	margin-left: 5px; 
-}
-
-.converter .field-input input {
-	width: 120px; 
-	height: 30px;
-}
-</style>
-
 {% endblock %}
 
+
 {% block pills %}
+	<li class="active" role="presentation"><a id="calcTab" data-target="#calculator" role="tab" data-toggle="tab">Calculator</a></li>
+	<li role="presentation"> <a id="fluidsTab" data-target="#fluids" role="tab" data-toggle="tab">Fluid info</a></li>
+	<li role="presentation"> <a id="saturationTab" data-target="#saturation" role="tab" data-toggle="tab">Saturation</a></li>
+	<li role="presentation"> <a id="docTab" data-target="#doc" role="tab" data-toggle="tab">Doc</a></li>
 {% endblock %}
 
 {% block content %}
-<div ng-app="SmoConvert" ng-controller="SmoConvertController">
-	<h1 class="title">Unit converter</h1>
-	<div ng-form name="myForm">
-		<div unit-input-view="input"></div>
-	</div>					
-<!-- 	<div ng-show="input.inputsObtained"><button ng-disabled="!myForm.$valid" class="btn btn-default" ng-click="convert()">Convert</button></div> -->
-<!-- 	<div ng-if="!input.autoFetch"><div unit-input-view="input"></div> -->
+<div ng-app="FluidPropsCalculator" ng-controller="FluidPropsController">
+	<div class="tab-content">
+		<div class="tab-pane active page-container" id="calculator">		
+			<h1 class="title">Fluid properties calculator</h1>
+			<div class="title-figure">
+				<img src="{% static 'ThermoFluids/StateDiagram3D.svg' %}"></img>
+			</div>		
+{% verbatim %}	
+				<div smo-model-view="PlotViewInputs" view-type="input" communicator="plotObject.inputCommunicator"></div>
+{% endverbatim %}
+		</div>
+		<div class="tab-pane" id="doc">
+			<div class="docview">
+				{% include 'documentation/html/FluidPropsCalculator.html' %}
+			</div>
+		</div>
+		<div class="tab-pane page-container" id="fluids">
+{% verbatim %}	
+			<h1 class="title">Fluid information</h1>			
+			<div ng-if="fluidInfo.inputCommunicator.loading" class="alert alert-info" role="alert">Loading...</div>
+			<div ng-if="fluidInfo.inputCommunicator.commError" class="alert alert-danger" role="alert">Communication error: <span ng-bind="fluidInfo.inputCommunicator.errorMsg"></span></div>
+			<div ng-if="fluidInfo.inputCommunicator.serverError" class="alert alert-danger" role="alert">Server error: <span ng-bind="fluidInfo.inputCommunicator.errorMsg"></span></div>
+			<div ng-if="fluidInfo.inputCommunicator.dataReceived">
+				<div class="section">
+					<div class="field-label">Select a fluid:</div>
+					<div class="field-select choice">
+						<select ng-model="fluidInfo.selectedFluid" ng-options="fluid as fluid.label for fluid in fluidInfo.inputCommunicator.data"></select>
+					</div>
+				</div>
+				
+				<div class="section">
+					<div style="display: inline-block;" ng-repeat="constant in fluidInfo.selectedFluid.constants.definitions[0].groups">
+						<div smo-field-group="constant" view-type="'output'" smo-data-source="fluidInfo.selectedFluid.constants.values">
+						</div>
+					</div>
+				</div>				
+				<div class="section">
+					<h1>Literature References</h1>				
+					<div ng-repeat="pair in fluidInfo.selectedFluid.references" ng-show="pair[1]">
+						<span class="label-text">{{pair[0]}}:</span> {{pair[1].author}}, <span class="italic-text">{{pair[1].title}}</span>
+					</div>			
+				</div>
+			</div>
+			
+		</div>
+{% endverbatim %}
+		<div class="tab-pane page-container" id="saturation">
+			<h1 class="title">Saturation</h1>
+			<div ng-if="saturation.inputCommunicator.loading" class="alert alert-info" role="alert">Loading...</div>
+			<div ng-if="saturation.inputCommunicator.commError" class="alert alert-danger" role="alert">Communication error: <span ng-bind="saturation.inputCommunicator.errorMsg"></span></div>
+			<div ng-if="saturation.inputCommunicator.serverError" class="alert alert-danger" role="alert">Server error: <span ng-bind="saturation.inputCommunicator.errorMsg"></span></div>
+			<div ng-if="saturation.inputCommunicator.dataReceived">						
+				<div class="section">
+					<div class="field-label">Select a fluid:</div>
+					<div class="field-select choice">
+						<select ng-model="saturation.selectedFluid" ng-options="pair[0] as pair[1] for pair in saturation.inputCommunicator.data"></select>
+					</div>
+					<div class="field-select choice" style="margin-left: 5px;">
+						<button ng-click="fetchSaturationData()">Go!</button>
+					</div>
+				</div>
+			</div>
+			<div ng-if="saturation.resultsCommunicator.loading" class="alert alert-info" role="alert">Loading...</div>
+			<div ng-if="saturation.resultsCommunicator.commError" class="alert alert-danger" role="alert">Communication error: <span ng-bind="saturation.resultsCommunicator.errorMsg"></span></div>
+			<div ng-if="saturation.resultsCommunicator.serverError" class="alert alert-danger" role="alert">Server error: <span ng-bind="saturation.resultsCommunicator.errorMsg"></span></div>
+			<div ng-if="saturation.resultsCommunicator.dataReceived">			
+				<div smo-plot='saturationPlot' src-data='plotObject'></div>
+			</div>
+		</div>
+	</div>
 </div>
 {% endblock %}
