--- a/static/css/SmoInputOutputView.css
+++ b/static/css/SmoInputOutputView.css
@@ -11,7 +11,7 @@
 [smo-field-group] {
 	display: inline-block;
 	margin-bottom: 20px;
-	margin-right: 70px; 
+	margin-right: 70px;
 	vertical-align:top;
 }
 
@@ -26,17 +26,11 @@
 .nav-tabs.super-group {
 	
 }
-/* Active tab */
-.nav-tabs.super-group > li.active > a, .nav-tabs.super-group > li.active > a:hover, .nav-tabs.super-group > li.active > a:focus {
-	cursor: default;
-}
-
 .super-group {
 /* 	border-style: solid;  */
 /* 	border-color: #777;  */
 /* 	border-width: 1px;  */
-	padding-left: 20px; 
-/* 	padding-top: 20px; */
+	padding-left: 20px;
 /* 	padding-bottom: 20px; */
 	overflow: auto;
 }
@@ -45,6 +39,15 @@
 /* 	margin-bottom: 20px; */
 	margin-top: 20px;
 }
+
+[smo-super-group-set] > ul > li > a, [smo-super-group-set] > ul > li.active > a {
+	cursor: pointer;
+}
+
+/* Active tab */
+/* .nav-tabs.super-group > li.active > a, .nav-tabs.super-group > li.active > a:hover, .nav-tabs.super-group > li.active > a:focus { */
+/* 	cursor: default; */
+/* } */
 
 /* Field */
 [smo-quantity], [smo-quantity], [smo-choice], [smo-string] {
