--- a/static/css/SmoInputOutputView.css
+++ b/static/css/SmoInputOutputView.css
@@ -30,7 +30,7 @@
 /* 	border-style: solid;  */
 /* 	border-color: #777;  */
 /* 	border-width: 1px;  */
-	padding-left: 20px;
+/* 	padding-left: 20px; */
 /* 	padding-bottom: 20px; */
 	overflow: auto;
 }
