Mostly finished CrogenicPipe class for HeatExchange1D. Some convergence problems to be resolved.
Signed-off-by: Atanas Pavlov <atanas.pavlov@sysmoltd.com>

--- a/templates/Base.html
+++ b/templates/Base.html
@@ -57,8 +57,8 @@
 				        <li><a href="{% url 'ThermoFluids:FlowResistance' %}">Flow resistance</a></li>
 				        <li><a href="{% url 'ThermoFluids:HeatPump' %}">Heat pump / AC / Refrigerator</a></li>
 				        <li><a href="{% url 'ThermoFluids:FreeConvection' %}">Free convection</a></li>
-				        <li><a href="{% url 'ThermoFluids:HeatExchange1D' %}">Heat exchange (1D configurations)</a></li>
-				        <li><a href="{% url 'ThermoFluids:CryogenicInsulation' %}">Cryogenic insulation</a></li>
+<!-- 				        <li><a href="{% url 'ThermoFluids:HeatExchange1D' %}">Heat exchange (1D configurations)</a></li> -->
+<!-- 				        <li><a href="{% url 'ThermoFluids:CryogenicInsulation' %}">Cryogenic insulation</a></li> -->
 <!-- 				        <li class="divider"></li> -->
 <!-- 				        <li class="dropdown-header">Nav header</li> -->
 <!-- 				        <li><a href="{% url 'ThermoFluids:testView' %}">Test View</a></li> -->
