--- a/ThermoFluids/templates/ThermoFluids/HeatExchange1D.html
+++ b/ThermoFluids/templates/ThermoFluids/HeatExchange1D.html
@@ -44,8 +44,8 @@ angular.module('HeatExchange1D', ['ui.bootstrap', 'smo'])
 {% endblock %}
 
 {% block pills %}
-	<li class="active" role="presentation"><a id="wireHeatingTab" data-target="#wireHeating" role="tab" data-toggle="tab">Wire heating</a></li>
-	<li role="presentation"><a id="cryogenicPipeTab" data-target="#cryogenicPipe" role="tab" data-toggle="tab">Cryogenic pipe</a></li>
+	<li class="active" role="presentation"><a id="cryogenicPipeTab" data-target="#cryogenicPipe" role="tab" data-toggle="tab">Cryogenic pipe</a></li>
+	<li role="presentation"><a id="wireHeatingTab" data-target="#wireHeating" role="tab" data-toggle="tab">Wire heating</a></li>
 	<li role="presentation"><a id="docTab" data-target="#doc" role="tab" data-toggle="tab">Doc</a></li>
 {% endblock %}
 
@@ -53,7 +53,7 @@ angular.module('HeatExchange1D', ['ui.bootstrap', 'smo'])
 <div ng-app="HeatExchange1D" ng-controller="HeatExchange1DController">
 	<div class="tab-content">
 		
-		<div class="tab-pane active page-container" id="wireHeating">
+		<div class="tab-pane page-container" id="wireHeating">
 			<h1 class="title">Wire heating</h1>
 			<div smo-model-view="wireHeatingInputs" view-type="input" communicator="wireHeating.inputCommunicator"></div>
 			<div class="section" style="margin-left: 20px;">		
@@ -66,7 +66,7 @@ angular.module('HeatExchange1D', ['ui.bootstrap', 'smo'])
 			</div>
 		</div>
 		
-		<div class="tab-pane page-container" id="cryogenicPipe">
+		<div class="tab-pane active page-container" id="cryogenicPipe">
 			<h1 class="title">Cryogenic pipe</h1>
 			<div smo-model-view="cryogenicPipeInputs" view-type="input" communicator="cryogenicPipe.inputCommunicator"></div>
 			<div class="section" style="margin-left: 20px;">		
