Fixed problem with the results from a cryogenic pipe model.
Signed-off-by: Atanas Pavlov <atanas.pavlov@sysmoltd.com>

--- a/ThermoFluids/templates/ThermoFluids/HeatExchange1D.html
+++ b/ThermoFluids/templates/ThermoFluids/HeatExchange1D.html
@@ -11,6 +11,7 @@
 <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 
 <script>
+google.load('visualization', '1.0', {'packages':["corechart", "table", "controls"]});
 angular.module('HeatExchange1D', ['ui.bootstrap', 'smo'])
 	.config(['$httpProvider', function($httpProvider) {
 	    $httpProvider.defaults.xsrfCookieName = 'csrftoken';
