--- a/templates/Base.html
+++ b/templates/Base.html
@@ -45,7 +45,7 @@
 <!--             <span class="icon-bar"></span> -->
 <!--             <span class="icon-bar"></span> -->
           </button>
-          <a class="navbar-brand" href="{% url 'home' %}">SmoWeb</a>
+          <a class="navbar-brand" href="{% url 'Home' %}">SmoWeb</a>
         </div>
       	<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav" >
