--- a/templates/UnitConverter.html
+++ b/templates/UnitConverter.html
@@ -11,17 +11,31 @@ angular.module('SmoConvert', ['ui.bootstrap', 'smo'])
 	    $httpProvider.defaults.xsrfCookieName = 'csrftoken';
 	    $httpProvider.defaults.xsrfHeaderName = 'X-CSRFToken';
 	}])
-	.controller('SmoConvertController', [ '$scope', function($scope) {
-
-	$scope.input = {autoFetch: true, dataUrl: '/ThermoFluids/TestView/', action: 'getInputs'};
-// 	$scope.outputs = [{ dataUrl: '/ThermoFluids/TestView/', action: 'compute'}];
+	.controller('SmoConvertController', [ '$scope', 'ModelCommunicator', 'variables', 
+	                                      function($scope, ModelCommunicator, variables) {
+	$scope.unitConverter = {
+			communicator: new ModelCommunicator()
+		};
+		
+	$scope.unitConverter.communicator.fetchData(
+		'getQuantities', {}, function(comm){
+			$scope.quantityData = comm.data;
+			$scope.renderConverter();
+		}
+	);
 	
-// 	$scope.compute = function(index) {
-// 		$scope.outputs[index].fetchData($scope.inputs[index].data.values);
-// 	}
-	
-	$scope.convert = function() {
-		$scope.input.autoFetch = false;
+	$scope.renderConverter = function() {
+		$scope.quantities = {};
+		for (name in $scope.quantityData) {
+			var value = $scope.quantityData[name];
+			if (value.SIUnit == '-')
+				continue
+			else {
+				$scope.quantities[value.title] = new variables.Quantity(name, value.title, value.nominalValue, value.SIUnit, value.units);
+			}
+		}
+		$scope.choiceVar = $scope.quantities[Object.keys($scope.quantities)[0]];
+		console.log($scope.choiceVar.unitsArr);
 	}
 }])
 </script>
@@ -32,7 +46,37 @@ angular.module('SmoConvert', ['ui.bootstrap', 'smo'])
 
 {% block content %}
 <div ng-app="SmoConvert" ng-controller="SmoConvertController">
-	<h1 class="title">Unit converter</h1>
-		<div converter-input-view="input"></div>
+	<div class="page-container">
+		<h1 class="title">Unit converter</h1>
+		<div class="section">
+			<div ng-if="unitConverter.communicator.loading" class="alert alert-info" role="alert">Loading...</div>
+			<div ng-if="unitConverter.communicator.commError" class="alert alert-danger" role="alert">Communication error: <span ng-bind="unitConverter.communicator.errorMsg"></span></div>
+			<div ng-if="unitConverter.communicator.serverError" class="alert alert-danger" role="alert">Server error: <span ng-bind="unitConverter.communicator.errorMsg"></span>
+				<div>Stack trace:</div><pre><div ng-bind="unitConverter.communicator.stackTrace"></div></pre>
+			</div>
+		
+			<div ng-if="unitConverter.communicator.dataReceived">
+				<div class="converter">
+					<div class="choice-group">
+						<div class="select-text">Select a quantity:</div>
+						<div>
+							<select ng-model="choiceVar" ng-options="value as name for (name, value) in quantities"></select>
+						</div>
+					</div>
+					<div class="results-group">
+						<div class="field" ng-repeat="unit in choiceVar.unitsArr track by $index">
+		{% verbatim %}
+							<div ng-form name="Form{{$index}}" class="field-input">
+								<input name="input" type="text" ng-pattern="/^[-+]?[0-9]*\\.?[0-9]+([eE][-+]?[0-9]+)?$/" ng-model="unit[2]" ng-change="choiceVar.updateValues($index, Form{{$index}}.input.$error.pattern)">
+							</div>
+							<div class="field-label" ng-bind="unit[0]"></div>
+							<div class="input-error" ng-show="Form{{$index}}.input.$error.pattern">Enter a valid number</div>
+		{% endverbatim %}
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
 {% endblock %}
