--- a/static/css/SmoInputOutputView.css
+++ b/static/css/SmoInputOutputView.css
@@ -136,7 +136,6 @@
 /* Unit Converter specific styles */
 .converter {
 	margin-top: 40px;
-	text-align: center;
 	border-style: solid; 
 	border-top: none; 
 	border-color: #DDD; 
@@ -145,6 +144,7 @@
 	padding-right: 20px;
 	display: inline-block;
 	overflow: auto;
+	text-align: left;
 }
 
 .converter .choice-group {
