Fixed smo-table csv export
Signed-off-by: Ivaylo Mihaylov <ivombg@yahoo.com>

--- a/templates/UnitConverter.html
+++ b/templates/UnitConverter.html
@@ -13,9 +13,12 @@ angular.module('SmoConvert', ['ui.bootstrap', 'smo'])
 	}])
 	.controller('SmoConvertController', [ '$scope', 'ModelCommunicator', 'variables', 
 	                                      function($scope, ModelCommunicator, variables) {
+	$scope.inputPattern = /^[-+]?[0-9]*\.?[0-9]+([eE][-+]?[0-9]+)?$/;
+	//$scope.inputPattern = /^[0-9]$/;
+		
 	$scope.unitConverter = {
-			communicator: new ModelCommunicator()
-		};
+		communicator: new ModelCommunicator()
+	};
 		
 	$scope.unitConverter.communicator.fetchData(
 		'getQuantities', {}, function(comm){
@@ -66,7 +69,7 @@ angular.module('SmoConvert', ['ui.bootstrap', 'smo'])
 						<div class="field" ng-repeat="unit in choiceVar.unitsArr track by $index">
 		{% verbatim %}
 							<div ng-form name="Form{{$index}}" class="field-input">
-								<input name="input" type="text" ng-pattern="/^[-+]?[0-9]*\\.?[0-9]+([eE][-+]?[0-9]+)?$/" ng-model="unit[2]" ng-change="choiceVar.updateValues($index, Form{{$index}}.input.$error.pattern)">
+								<input name="input" type="text" ng-model="unit[2]" ng-pattern="/^[-+]?[0-9]*\.?[0-9]+([eE][-+]?[0-9]+)?$/" ng-change="choiceVar.updateValues($index, Form{{$index}}.input.$error.pattern)">
 							</div>
 							<div class="field-label" ng-bind="unit[0]"></div>
 							<div class="input-error" ng-show="Form{{$index}}.input.$error.pattern">Enter a valid number</div>
