--- a/DataManagement/templates/DataManagement/DataExplorer.html
+++ b/DataManagement/templates/DataManagement/DataExplorer.html
@@ -120,6 +120,7 @@
 			var csvString = columnLabelsString + "\n";
 			var dataViewCSV = google.visualization.dataTableToCsv($scope.view);
 			csvString += dataViewCSV;
+			
 			// download stuff
 		 	var blob = new Blob([csvString], {
 		 	  "type": "text/csv;charset=utf8;"			
@@ -140,11 +141,14 @@
 		 	link.click();
 		};
 		
-		$scope.exportToPNG = function(){
-			var img = document.getElementById('demoimg');
+		$scope.exportPNG = function(){
+			var img = document.getElementById('imgElem');
+			console.log($scope.chart1);
 			Dygraph.Export.asPNG($scope.chart1, img);
-			var link = document.createElement("a");			
-		 	if(link.download !== undefined) { // feature detection
+			
+			var link = document.getElementById('pngElem');
+		 	
+			if(link.download !== undefined) { // feature detection
 		 	  // Browsers that support HTML5 download attribute
 		 	  link.setAttribute("href", img.src);
 		 	  link.setAttribute("download", $scope.imgFileName);
@@ -154,7 +158,7 @@
 		 		  alert("Needs to implement server side export");
 		 		  return;
 		 	}
-		 	document.body.appendChild(link);
+// 		 	document.body.appendChild(link);
 		 	link.click();
 		}
 	}]);
@@ -199,8 +203,9 @@
 			</div>			
 			<div class="export">
 				File name:<input type="text" ng-model="imgFileName"></input>
-   				<button class="btn btn-default" ng-click="exportToPNG()">Export as PNG</button>
-   				<img id="demoimg" hidden>
+   				<button class="btn btn-default" ng-click="exportPNG()">Export as PNG</button>
+   				<img id="imgElem" hidden>
+   				<a id="pngElem" hidden></a>
 			</div>
 			
 	  </div>
