Fixed Compute buttons margins
Signed-off-by: Ivaylo Mihaylov <ivombg@yahoo.com>

--- a/ThermoFluids/templates/ThermoFluids/CryogenicInsulation.html
+++ b/ThermoFluids/templates/ThermoFluids/CryogenicInsulation.html
@@ -40,7 +40,7 @@ angular.module('CryogenicInsulation', ['ui.bootstrap', 'smo'])
 		<div class="tab-pane active page-container" id="calculator">
 			<h1 class="title">Rarefied gas conduction </h1>
 			<div smo-model-view="CryogenicInsulationInputs" view-type="input" communicator="cryogenicInsulation.inputCommunicator"></div>
-			<div class="section" style="margin-left: 20px;"> 		
+			<div class="section"> 		
 				<div ng-show="cryogenicInsulation.inputCommunicator.dataReceived"><button ng-disabled="!cryogenicInsulation.inputCommunicator.fieldsValid" 
 					 class="btn btn-default" ng-click="compute()">Compute</button>
 				</div>
