--- a/ThermoFluids/templates/ThermoFluids/FreeConvection.html
+++ b/ThermoFluids/templates/ThermoFluids/FreeConvection.html
@@ -56,7 +56,7 @@ angular.module('FreeConvection', ['ui.bootstrap', 'smo'])
 <!-- 				<img src="{% static '' %}" type="image/svg+xml"></object> -->
 			</div>
 			<div smo-model-view="convectionExternalInputs" view-type="input" communicator="convectionExternal.inputCommunicator"></div>
-			<div class="section" style="margin-left: 20px;"> 		
+			<div class="section"> 		
 				<div ng-show="convectionExternal.inputCommunicator.dataReceived"><button ng-disabled="!convectionExternal.inputCommunicator.fieldsValid" 
 					 class="btn btn-default" ng-click="computeExternal()">Compute</button>
 				</div>
@@ -71,7 +71,7 @@ angular.module('FreeConvection', ['ui.bootstrap', 'smo'])
 <!-- 				<img src="{% static '' %}" type="image/svg+xml"></object> -->
 			</div>
 			<div smo-model-view="convectionInternalInputs" view-type="input" communicator="convectionInternal.inputCommunicator"></div>
-			<div class="section" style="margin-left: 20px;"> 		
+			<div class="section"> 		
 				<div ng-show="convectionInternal.inputCommunicator.dataReceived"><button ng-disabled="!convectionInternal.inputCommunicator.fieldsValid" 
 					 class="btn btn-default" ng-click="computeInternal()">Compute</button>
 				</div>
