--- a/ThermoFluids/templates/ThermoFluids/FluidPropsCalculator.html
+++ b/ThermoFluids/templates/ThermoFluids/FluidPropsCalculator.html
@@ -105,7 +105,7 @@ angular.module('FluidPropsCalculator', ['ui.bootstrap', 'smo'])
 		<div class="tab-pane active page-container" id="calculator">		
 			<h1 class="title">Fluid properties calculator</h1>
 			<div class="title-figure">
-				<img src="{% static 'ThermoFluids/StateDiagram3D.svg' %}"></img>
+				<img height="150" style="width: 250px" src="{% static 'ThermoFluids/StateDiagram3D.svg' %}"></img>
 			</div>		
 {% verbatim %}	
 			<ul class="nav nav-tabs" role="tablist" id="FluidPointTabs">
